--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
 #info {
     margin-top: 50px;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}
