--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+html {
+    position: relative;
+    min-height: 100% !important;
+}
+
+body {
+    margin-bottom: 60px;
+}
+
 #info {
     margin-top: 50px;
 }
