Added reset button for main chain reaction game. Also removed randomness from fast money round. Alsoat the end of a fast money round, show correct/incorrect words.

--- a/chains/style.css
+++ b/chains/style.css
@@ -23,6 +23,22 @@ input:focus {
     display: inline-block;
 }
 
+#correctList {
+    margin-bottom: 0;
+}
+
+#incorrectList {
+    margin-top: 0;
+}
+
+.incorrect {
+    color: #a94442;
+}
+
+.correct {
+    color: #3c763d;
+}
+
 .margin-top {
     margin-top: 10px;
 }
